# applypilot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  applypilot-agent.spec  compose.yaml  pyproject.toml  render.yaml  vercel.json
.github/workflows/: build-desktop.yml  ci.yml  pages.yml
apps/desktop/: README.md
apps/web/: README.md  app.js  checkout.html  checkout.js  index.html  privacy.html  refund.html  runtime.js  styles.css  terms.html
docs/: architecture.md  auto-submit.md  background-scheduling.md  billing.md  customer-ai-flows.md  desktop-packaging.md  launch-checklist.md  mcp-and-openai-app.md  migration-from-working-agent.md  product-decisions.md  product-strategy.md  provider-layer.md  render-deployment.md  roadmap.md  saas-mvp-flow.md  security.md  unattended-desktop-agent.md
examples/: jobs.json  profile.md
landing/: index.html  privacy.html  refund.html  robots.txt  sitemap.xml  styles.css  terms.html
packaging/: README.md  agent_launcher.py  build_desktop.py  desktop_launcher.py
src/applypilot/: __init__.py  agent.py  applications.py  billing.py  career.py  cli.py  config.py  dashboard.py  desktop.py  form_filler.py  human.py  leads.py  legacy_agent.py  models.py  policy.py  premium.py  (+9 more)
tests/: test_agent.py  test_applications.py  test_billing.py  test_career.py  test_claude_cleanup_safety.py  test_dashboard.py  test_desktop_api.py  test_legacy_agent.py  test_legacy_import.py  test_policy.py  test_provider_config.py  test_razorpay_standard.py  test_rules_provider.py  test_saas_store.py  test_search_plan.py  test_server_health.py
(+28 files in other folders)
